syntax = "proto3";

package auth_svc;

import "google/protobuf/timestamp.proto";




option go_package = "./apis/serviceconn/gateway_user/pb";

message UserProfileReq {
    string account_id = 1;
    string username = 2;
    string email = 3;
    bool is_private = 4;
    string ip = 5;
    string client = 6;
}

message UserProfileRes {
    string account_id = 1;
    string username = 2; 
    string first_name = 3;
    string last_name = 4;
    string date_of_birth = 5;
    int64 role_id = 6;
    string bio = 7;
    string avatar_url = 8; 
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10; 
    string address = 11;
    string contact_number = 12;
    string user_status = 13;
    string instagram = 14;
    string linkedin = 15;
    string twitter = 16;
    string github = 17;
}

message UserActivityReq {
    string user_id = 1;
    string user_name = 2;
    string email = 3;
    string ip = 4;
    string client = 5;
}

message UserActivityResp {
    repeated UserActivity response = 1;
}
message UserActivity {
    string event_type = 1;
    string service_type = 2;
    string timestamp = 3;
    string ip_address = 4;
    string description = 5;
}

// message Error {
//     int32 status = 1;
//     string error = 2;
//     string message = 3;
// }

message UpdateUserProfileReq {
    string username = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    string bio = 5;
    string address = 6;
    string contact_number = 7;
    string ip = 8;
    string client = 9;
    bool partial = 10;
    string instagram = 11;
    string linkedin = 12;
    string twitter = 13;
    string github = 14;
}

message UpdateUserProfileRes {
    string account_id = 1;
    string username = 2; 
    string first_name = 3;
    string last_name = 4;
    string date_of_birth = 5;
    string bio = 6;
    string address = 7;
    int64 contact_number = 8;
    string email = 9;
    int64  status = 10;
    string error = 11;
}

message DeleteUserProfileReq {
    string account_id = 1;
    string username = 2;
    string email    = 3;
    string client   = 4;
    string ip = 5;
}

message DeleteUserProfileRes {
    string success = 1;
    string error = 2;
    string status = 3;
}

message GetTopicsRequests {
}

message Topics {
    string topic = 1;
    string category = 2;
}

message GetTopicsResponse {
    repeated Topics topics = 1; 
}

message Category {
    repeated string Topics = 1;
} 

message GetAllCategoriesReq {
}

message GetAllCategoriesRes {
    map<string, Category> category = 1;
}

message UserDetailsByAccIdReq {
    string account_id = 1;
}

message UserDetailsByAccIdResp {
    string account_id = 1;
    string username = 2; 
    string first_name = 3;
    string last_name = 4;
    string bio = 5;
    string error = 6;
}

service UserService {
    rpc GetUserActivities(UserActivityReq) returns (UserActivityResp) {}
    rpc GetUserProfile(UserProfileReq) returns (UserProfileRes) {}
    rpc UpdateUserProfile(UpdateUserProfileReq) returns (UpdateUserProfileRes) {}
    rpc DeleteUserProfile(DeleteUserProfileReq) returns (DeleteUserProfileRes) {}
    rpc GetAllTopics(GetTopicsRequests) returns (GetTopicsResponse) {}
    rpc GetAllCategories(GetAllCategoriesReq) returns (GetAllCategoriesRes) {}
    rpc GetUserDetailsByAccId(UserDetailsByAccIdReq) returns (UserDetailsByAccIdResp) {}
    // Bookmark blog
    // Get Bookmarks
    // Invite as co author
    // Accept co author invitation
    // Reject co author invitation
    // Revoke co author invitation access
}

